unpackaged/main/default/objects/TaxCodeConfiguration__c/TaxCodeConfiguration__c.object-meta.xml
<CustomObject>
    <label>Tax code configuration</label>
    <nameField>
        <label>Tax code configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax code configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>