unpackaged/main/default/objects/TaxCodeConfiguration__c/fields/deliverToCountry__c.field-meta.xml
<CustomField>
    <fullName>deliverToCountry__c</fullName>
    <label>deliverToCountry</label>
    <length>25</length>
    <type>Text</type>
</CustomField>