unpackaged/main/default/objects/TaxCodeConfiguration__c/fields/isDefault__c.field-meta.xml
<CustomField>
    <fullName>isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefault</label>
    <type>Checkbox</type>
</CustomField>