unpackaged/main/default/objects/TaxCodeConfiguration__c/fields/taxCode__c.field-meta.xml
<CustomField>
    <fullName>taxCode__c</fullName>
    <label>taxCode</label>
    <length>25</length>
    <type>Text</type>
</CustomField>