unpackaged/main/default/objects/TaxCodeConfiguration__c/fields/taxRate__c.field-meta.xml
<CustomField>
    <fullName>taxRate__c</fullName>
    <label>taxRate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>