unpackaged/main/default/objects/TaxCodeConfiguration__c/validationRules/Tax_ISO2_Controlle.validationRule-meta.xml
<ValidationRule>
    <fullName>Tax_ISO2_Controlle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(deliverToCountry__c)),
    NOT(REGEX(deliverToCountry__c, &quot;^[A-Z]{2}$&quot;)) )</errorConditionFormula>
    <errorMessage>The value should be in format ISO2</errorMessage>
</ValidationRule>