unpackaged/main/default/objects/TaxCodeConfiguration__c/validationRules/TaxCode_Controlle.validationRule-meta.xml
<ValidationRule>
    <fullName>TaxCode_Controlle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(taxCode__c)), 
    NOT(REGEX(taxCode__c, &quot;^.{2}$&quot;))
)</errorConditionFormula>
    <errorMessage>The value of the field should be in two characters.</errorMessage>
</ValidationRule>