unpackaged/main/default/objects/TaxCodeConfiguration__c/validationRules/TaxRate_Controlle.validationRule-meta.xml
<ValidationRule>
    <fullName>TaxRate_Controlle</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(taxRate__c)),
    OR(
        taxRate__c &lt; 0, 
        taxRate__c &gt; 1
    )
)</errorConditionFormula>
    <errorMessage>The value should be between 0 and 1 or empty.</errorMessage>
</ValidationRule>