unpackaged/main/default/objects/TaxCodeConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>deliverToCountry__c</columns>
    <columns>taxRate__c</columns>
    <columns>taxCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>